# atlsh

./: .MY_GREP_FOR_ALL.bash  .gitignore  .grepignore  .labelignore  .shortcut  ChangeLog  ChangeLog.md  INSTALL.md  Makefile.am  Makefile.in  NEWS.doc  README.md  changes
atlsh/: .grepignore  .travis.yml  ChangeLog  Makefile.am  README.md
atlsh/compat/: strncasecmp.c  strtol.c  strtoul.c
atlsh/doc/: AppInit.3  GetStdChan.3  InitStubs.3  StdChannels.3  Tcl_Main.3  after.n  atlsh.1  atltest.n  info.n  library.n  msgcat.n  pkgMkIndex.n  tclvars.n  throw.n  tm.n
atlsh/generic/: regc_lex.c  regexec.c  regguts.h  tcl.decls  tcl.h  tclAlloc.c  tclAssembly.c  tclBasic.c  tclCmdIL.c  tclCmdMZ.c  tclCompCmds.c  tclDate.c  tclDecls.h  tclDictObj.c  tclDisassemble.c  tclEvent.c  tclExecute.c  tclFCmd.c  tclFileSystem.h  tclGet.c  tclGetDate.y  tclIO.c  tclIntDecls.h  tclInterp.c  tclListObj.c  tclMain.c  tclObj.c  tclParse.c  tclParse.h  tclPkg.c  tclPlatDecls.h  tclResolve.c  tclResult.c  tclScan.c  tclStringObj.c  tclStubInit.c  tclTest.c  tclTimer.c  tclUtil.c  tclVar.c
atlsh/pkgs/: package.list.txt
atlsh/tests/: README  aaa_exit.test  all.tcl  append.test  appendComp.test  apply.test  assemble.test  assocd.test  async.test  atltest.test  atltests.tcl  autoMkindex.test  basic.test  binary.test  case.test  chan.test  chanio.test  clock.test  cmdAH.test  cmdIL.test  cmdInfo.test  cmdMZ.test  compExpr-old.test  compExpr.test  compile.test  concat.test  config.test  coroutine.test  dcall.test  dict.test  dstring.test  encoding.test  env.test  error.test  eval.test  event.test  exec.test  execute.test  expr-old.test  expr.test  (+105 more)
atlsh/tools/: Makefile.in  checkLibraryDoc.tcl  configure.ac  configure.in  findBadExternals.tcl  genStubs.tcl  installData.tcl  man2html.tcl  tclZIC.tcl  tcltk-man2html-utils.tcl  tcltk-man2html.tcl  uniClass.tcl
atlsh/unix/: .gitignore  Makefile.in  Makefile.orig  README  atl.pc.in  atlBuild.sh.in  atlConfig.sh.in  configure  configure.ac  configure.in  tcl.m4  tcl.spec  tclAppInit.c  tclBuild.sh.in  tclConfig.h.in  tclLoadDl.c  tclLoadDyld.c  tclLoadNext.c  tclLoadShl.c  tclUnixChan.c  tclUnixFCmd.c  tclUnixFile.c  tclUnixInit.c  tclUnixSock.c  tclUnixThrd.c  tclUnixTime.c  tclXtTest.c
atlsh/unix/dltest/: Makefile.in  README  pkga.c  pkgb.c  pkgc.c  pkgd.c  pkge.c  pkgua.c
compat/: memcmp.c  strtod.c
docs/: .gitignore  Makefile.am  Makefile.in  Nhi1Docs.cfg  docs.mk  list.mk  package.config  ressources.make  theATL.bash  theATL.css
docs/main/: Doxyfile.main  atlsh.doc  atltest.doc  main.config  main.doc
generic/: regex.h  tclCkalloc.c  tclCmdMZ.c  tclCompile.h  tclConfig.c  tclDecls.h  tclHistory.c  tclIOCmd.c  tclIndexObj.c  tclInt.decls  tclInt.h  tclIntPlatDecls.h  tclLink.c  tclLoadNone.c  tclMain.c  tclPanic.c  tclPipe.c  tclPosixStr.c  tclProc.c  tclStubLib.c  tclTest.c  tclTestProcBodyObj.c  tclTomMathDecls.h  tclTrace.c
tests/: .gitignore  .index.mk  .make_link.bash  .makefile_index.bash  Makefile.am  README  README_TESTS.md  aaa_exit.test  all.tcl  append.test  appendComp.test  apply.test  assemble.test  assocd.test  async.test  atltest.test  auto0  autoMkindex.test  basic.test  binary.test  case.test  chan.test  chanio.test  clock.test  cmdAH.test  cmdIL.test  cmdInfo.test  cmdMZ.test  compExpr-old.test  compExpr.test  compile.test  concat.test  config.test  coroutine.test  dcall.test  dict.test  dstring.test  encoding.test  env.test  error.test  (+121 more)
unix/: .gitignore  Makefile.in  configure  configure.ac  tcl.m4  tclLoadOSF.c  tclLoadShl.c  tclUnixInit.c  tclUnixTest.c
unix/autom4te.cache/: output.0  requests  traces.0
unix/dltest/: pkgc.c  pkgua.c
