#+
#:   @file         NHI1/theATL/Makefile.am
#:   @brief        Makefile.am - 23 Apr 2025 - aotto1968
#:   @copyright    (C) NHI - #1 - Project - Group
#:                 This software has NO permission to copy,
#:                 please contact AUTHOR for additional information
#:   @version      dab2062b1ae4798415131eec5f47ab719e955422
#:   @date         Wed Apr 23 08:13:17 2025 +0200
#:   @author       aotto1968 <aotto1968@t-online.de>
#:

SUBDIRS = docs

