#+
#:   @file         NHI1/theATL/Makefile.am
#:   @brief        Makefile.am - 25 Apr 2025 - aotto1968
#:   @copyright    (C) NHI - #1 - Project - Group
#:                 This software has NO permission to copy,
#:                 please contact AUTHOR for additional information
#:   @version      26ad3d0c4db2580ec216e2a0f020c9441c51785e
#:   @date         Fri Apr 25 12:09:06 2025 +0200
#:   @author       aotto1968 <aotto1968@t-online.de>
#:

SUBDIRS = docs

