#+
#:   @file         NHI1/theATL/docs/Makefile.am
#:   @brief        Makefile.am - 25 Apr 2025 - aotto1968
#:   @copyright    (C) NHI - #1 - Project - Group
#:                 This software has NO permission to copy,
#:                 please contact AUTHOR for additional information
#:   @version      6b7ff3cdcc61ece5dbc182fd6a905e2bd0fbacc9
#:   @date         Fri Apr 25 22:35:01 2025 +0200
#:   @author       aotto1968 <aotto1968@t-online.de>
#:

include docs.mk

# -------------------------------------------------------------------------------
# build pics

html-local: 
	$(srcdir)/.make-ressources.bash

clean-local: docs-clean-local
