#+
#:   @file         NHI1/theATL/docs/Makefile.am
#:   @brief        tag: nhi1-release-250425
#:   @copyright    (C) NHI - #1 - Project - Group
#:                 This software has NO permission to copy,
#:                 please contact AUTHOR for additional information
#:

include docs.mk

# -------------------------------------------------------------------------------
# build pics

html-local: 
	$(srcdir)/.make-ressources.bash

clean-local: docs-clean-local
